Refactor NameTagProvider to use ProtocolLib for packets
Replaced scoreboard-based implementation with ProtocolLib to handle player nametags and team management using packets. Simplified methods, added tablist customization, and updated interfaces for better clarity and flexibility. Removed redundant code and improved performance for handling nametags and visibility.